# streamly-filepath

./: .packcheck.ignore  CHANGELOG.md  NOTICE  README.md  cabal.project  stack.yaml  streamly-filepath.cabal
.github/workflows/: packcheck.yml
src/Streamly/Compat/: OsPath.hs
