cabal-version:       2.2
name:                streamly-filepath
version:             0.1.0
synopsis:            Streamly compatibility with filepath package
description:
  Facilities for interconverting between the `Path` type from streamly
  package and `OsPath` from the `filepath` package.
homepage:            https://streamly.composewell.com
bug-reports:         https://github.com/composewell/streamly-filepath/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           Composewell Technologies
category:            Streamly, Streaming, System
stability:           Experimental
tested-with:         GHC==9.4.4
                   , GHC==9.2.7
                   , GHC==9.0.2
                   , GHC==8.10.7
                   , GHC==8.8.4
                   , GHC==8.6.5
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  NOTICE
  README.md

source-repository head
  type: git
  location: https://github.com/composewell/streamly-filepath

common compile-options
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-unsafe
  if !impl(ghc < 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: compile-options
  hs-source-dirs: src
  exposed-modules:
    Streamly.Compat.OsPath
  build-depends:
      base              >= 4.8 && < 5
    , streamly-core     >= 0.2 && < 0.3
    , filepath          >= 1.4.100 && < 1.6
